# Readsmith

./: .env.example  .gitignore  Cargo.toml  Dockerfile  IDEA.pm  README.md  docker-compose.yml
migrations/: 0001_init.sql  0002_feed_fetch_state.sql  0003_items_fts.sql
src/: app.rs  config.rs  error.rs  lib.rs  main.rs  state.rs
src/db/: bookmark_repository.rs  feed_repository.rs  group_repository.rs  item_repository.rs  migration.rs  mod.rs  search_repository.rs
src/domain/: bookmark.rs  feed.rs  feed_fetch_state.rs  group.rs  item.rs  mod.rs  user_session.rs
src/routes/: auth.rs  bookmarks.rs  feeds.rs  groups.rs  items.rs  mod.rs  opml.rs  pages.rs  search.rs
src/services/: auth.rs  feed_discovery.rs  feed_fetcher.rs  feed_parser.rs  mod.rs  opml.rs  pull_policy.rs  pull_worker.rs  sanitizer.rs  url_guard.rs
static/: app.css  app.js
templates/: feeds.html  groups.html  layout.html  login.html  reader.html  search.html
templates/partials/: article_card.html  article_detail.html  article_list.html  feed_form.html  feed_tree.html  group_form.html  sidebar.html
tests/: config_test.rs  feed_parser_test.rs  item_repository_test.rs  opml_test.rs  pull_policy_test.rs  sanitizer_test.rs  url_guard_test.rs
